--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 
-baseurl: "https://glennevans.github.io" # the subpath of your site, e.g. /blog
-url: "/glenn-evans" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "https://khellow.github.io/My-Demo/" # the subpath of your site, e.g. /blog
+url: "/My-Demo" # the base hostname & protocol for your site, e.g. http://example.com
 
 markdown: kramdown
 
